--- a/html.html
+++ b/html.html
@@ -43,87 +43,91 @@
       </div>
     </section>
 
-    <h1 class="text-center">About Me</h1>
+    <h1 class="aboutMe">About Me</h1>
     <section id="about">
-      < class="Intro">
-
-      <div>
+      <div class="Intro">
         <div>
-          <img
-            class="myPic"
-            src="./style/Assets/Images/MyImage.jpeg"
-            alt="Image of me"
-          />
+          <div>
+            <img
+              class="myPic"
+              src="./style/Assets/Images/MyImage.jpeg"
+              alt="Image of me"
+            />
+          </div>
+
+          <div class="SubT">
+            <h3>That is my portofolio</h3>
+
+            <div class="hl"></div>
+
+            <ul>
+              <li>Name: Izzy Khalifa</li>
+              <li>Age: 20</li>
+              <li>Occupation: Web Developer</li>
+            </ul>
+            <div class="hl2"></div>
+            <div class="Intro">
+              <p>
+                I studied computer science at university for two years at my age
+                18 and then joined a Coding boot-camp at Monash University.Here
+                you can find some of my work done and my contact info.
+              </p>
+            </div>
+          </div>
         </div>
 
-        <div class="SubT">
-          <h3>That is my portofolio</h3>
+        <div class="contanier">
+          <h2 id="myWork">Here is some of my work!</h2>
+          <div class="vl"></div>
+          <div class="flex-container">
+            <div class="flex-item">
+              <div class="item-info">
+                <span>
+                  <img
+                    class="flex-img"
+                    src="./style/Assets/Images/cal app.png"
+                  />
+                  <h2>Calculator app</h2>
+                  Coming Soon</span
+                >
+              </div>
+            </div>
+            <div class="flex-item">
+              <img class="flex-img" src="./style/Assets/Images/ledwall.jpg" />
+              <div>
+                <span>
+                  <h2>LED Wall</h2>
+                  Coming Soon</span
+                >
+              </div>
+            </div>
+            <div class="flex-item">
+              <img class="flex-img" src="./style/Assets/Images/hotel.jpg" />
+              <div class="item-info">
+                <span
+                  ><h2>Hotel Management</h2>
+                  Coming Soon</span
+                >
+              </div>
+            </div>
+            <div class="flex-item">
+              <img class="flex-img" src="./style/Assets/Images/rest pos.png" />
+              <div class="item-info">
+                <span
+                  ><h2>Restaurant POS</h2>
+                  Coming Soon</span
+                >
+              </div>
+            </div>
 
-          <div class="hl"></div>
-
-          <ul>
-            <li>Name: Izzy Khalifa</li>
-            <li>Age: 20</li>
-            <li>Occupation: Web Developer</li>
-          </ul>
-          <p>----------------------------------------------------------</p>
-          <div class="Intro">
-            <p>
-              I studied computer science at university for two years at my age
-              18 and then joined a Coding boot-camp at Monash University.Here
-              you can find some of my work done and my contact info.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="contanier">
-        <h2 id="myWork">Here is some of my work!</h2>
-        <div class="vl"></div>
-        <div class="flex-container">
-          <div class="flex-item">
-            <div class="item-info">
-              <span>
-                <img class="flex-img" src="./style/Assets/Images/cal app.png" />
-                <h2>Calculator app</h2>
-                Coming Soon</span
-              >
-            </div>
-          </div>
-          <div class="flex-item">
-            <img class="flex-img" src="./style/Assets/Images/ledwall.jpg" />
-            <div>
-              <span>
-                <h2>LED Wall</h2>
-                Coming Soon</span
-              >
-            </div>
-          </div>
-          <div class="flex-item">
-            <img class="flex-img" src="./style/Assets/Images/hotel.jpg" />
-            <div class="item-info">
-              <span
-                ><h2>Hotel Management</h2>
-                Coming Soon</span
-              >
-            </div>
-          </div>
-          <div class="flex-item">
-            <img class="flex-img" src="./style/Assets/Images/rest pos.png" />
-            <div class="item-info">
-              <span
-                ><h2>Restaurant POS</h2>
-                Coming Soon</span
-              >
-            </div>
-          </div>
-          <div class="flex-item">
-            <img class="flex-img" src="./style/Assets/Images/tax cal.jpg" />
-            <div class="item-info">
-              <span
-                ><h2>Tax Calculator app</h2>
-                Coming Soon</span
-              >
+            <div class="flex-item">
+              <img class="flex-img" src="./style/Assets/Images/tax cal.jpg" />
+              <div class="item-info">
+                <span
+                  ><h2>Tax Calculator app</h2>
+                  Coming Soon</span
+                >
+              </div>
             </div>
           </div>
         </div>
