--- a/html.html
+++ b/html.html
@@ -56,14 +56,12 @@
           </div>
 
           <div class="SubT">
-            <h3>That is my portofolio</h3>
-
             <div class="hl"></div>
 
             <ul>
               <li>Name: Izzy Khalifa</li>
               <li>Age: 20</li>
-              <li>Occupation: Web Developer</li>
+              <li>Occupation: Full stack Developer</li>
             </ul>
             <div class="hl2"></div>
             <div class="Intro">
@@ -114,7 +112,7 @@
               <img class="flex-img" src="./style/Assets/Images/rest pos.png" />
               <div class="item-info">
                 <span
-                  ><h2>Restaurant POS</h2>
+                  ><h2>POS system</h2>
                   Coming Soon</span
                 >
               </div>
@@ -124,7 +122,7 @@
               <img class="flex-img" src="./style/Assets/Images/tax cal.jpg" />
               <div class="item-info">
                 <span
-                  ><h2>Tax Calculator app</h2>
+                  ><h2>Tax app</h2>
                   Coming Soon</span
                 >
               </div>
